fix focus effects

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       </header>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item nav__item--active">
+          <li class="nav__item">
             <a href="#" class="nav__link">Ремонт техники</a>
           </li>
           <li class="nav__item">
@@ -430,7 +430,7 @@
       </main>
       <footer class="footer">
         <div class="footer__content">
-          © 2019 CPS<br>
+          © 2023 CPS<br>
           Разработано командой
           <a href="#" class="footer__link">KataAcademy</a>
         </div>
